--- a/.classpath
+++ b/.classpath
@@ -1,9 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
 	<classpathentry kind="src" path="src"/>
-	<classpathentry kind="lib" path="lib/hadoop-common-0.21.0.jar"/>
-	<classpathentry kind="lib" path="lib/commons-logging-1.0.4.jar"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
-	<classpathentry kind="lib" path="/Users/stone/Documents/hprose.jar"/>
+	<classpathentry kind="lib" path="lib/hadoop-hop-0.2-core.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
